# OP2MapViewerRust

./: Cargo.toml  README.md  build.rs  on6_01.map
src/: main.rs  op2mapviewer.exe.manifest  op2mapviewer.rc
src/map/: loader.rs  mod.rs  types.rs
src/ui/: app.rs  cell_info.rs  map_view.rs
